Accessibility: fix low contrast of text

--- a/app/assets/styles/modules/_nav.css
+++ b/app/assets/styles/modules/_nav.css
@@ -178,8 +178,9 @@
     padding: 0.75rem 1rem;
     border: 1px solid currentColor;
     border-radius: 0.5rem;
+    font: 500 1.2rem/1.25 $menuFont;
     background: $HeaderFooterDarkBackground;
-    color: white;
+    color: #fff;
     cursor: pointer;
     transition: opacity 0.3s ease;
     z-index: $zIndex-5-FifthLevel;
